--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 #button{
-    background-color: blueviolet;
+    background-color: gold yello;
     color:#fff;
     width:100px;
     height: 35px;
