--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 #button{
-    background-color: gold yello;
+    background-color: yello;
     color:#fff;
     width:100px;
     height: 35px;
     Border-radius:5px; }
-Input {border-color: blueviole;}
+Input {border-color: #333;}
 input text {font-size:1.2em;}
 #year {color:blueviolet;font-size: 1.2em;font-weight: bold;text-align: center;}
